--- a/App/UI/MealPlanSearch.html
+++ b/App/UI/MealPlanSearch.html
@@ -64,7 +64,7 @@
 						</div>
 					
 					<div class="col-md-8 col-lg-8">
-							<p>This is some fucken breakfast yo</p>
+							<p>This is some breakfast yo</p>
 						</div>
 					</div>
 				</div>
@@ -74,7 +74,7 @@
 								<img src="breakfast5yes.jpg">
 							</div>
 						<div class="col-md-8 col-lg-8">
-							<p>This is some more fucken breakfast yo</p>
+							<p>This is some more breakfast yo</p>
 						</div>
 					</div>
 				</div>
